<resources>
    <string name="app_name">CodeDocsAPP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="highlights">Highlights</string>
    <string name="stuff_to_be_added_later">STUFF TO BE ADDED LATER</string>
    <string name="about_us">About Us</string>
    <string name="close">CLOSE</string>
    <string name="title_activity_register">Sign in</string>
    <string name="email_id">Email ID</string>
    <string name="already_a_member_sing_in">Already a member? Sing in</string>
    <string name="resgister">Resgister</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register_activity">Register</string>
    <string name="login">Login</string>
    <string name="register_click_here">Register? Click here</string>
</resources>
