<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".home"
    android:id="@+id/f_home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="300dip"
                android:layout_height="100dip"
                android:src="@drawable/logo"
                android:background="@color/colorPrimary"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dip"
                android:src="@drawable/linux"
                android:background="@color/colorPrimary"/>

        </LinearLayout>


        <!-- TODO: Update blank fragment layout -->

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/cvhe"
            app:cardBackgroundColor="#546E7A"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llhe"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/highlights"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#ffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cvno"
            app:cardBackgroundColor="#009688"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llno"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stuff_to_be_added_later"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="25dip"
                    android:textAlignment="center"
                    android:shadowColor="@color/colorPrimary"
                    android:textColor="#ffff"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00BCD4"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/cvab">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llab"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textStyle="bold"
                    android:textColor="#ffff"
                    android:textAlignment="center"
                    android:shadowColor="@color/colorPrimary"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>